--- a/PedoFitness/app/build.gradle
+++ b/PedoFitness/app/build.gradle
@@ -32,8 +32,11 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation 'com.scwang.wave:MultiWave:1.0.0-qlphq-  1'
+    //implementation 'com.scwang.wave:MultiWave:1.0.0-qlphq-  1'
+//    implementation 'com.scwang.wave:MultiWaveHeader:1.0.0-alpha-1'
+
 }
